Extend the unit tests and fix a bug they uncover

I've been investigating a bug in contact list when unmerging a single
contact from a Person would leave empty rows (and originally would
crash), turns out that removing Contact from Person does not emit the
rows removed signal and so the model then tries to access invalid
contact (and we get "out of bounds" assert).

REVIEW: 123238
BUG: 345769

CHANGELOG: Fix model not being properly updated after removing a contact from Person